force-app/main/default/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Approval_Queue__c</fullName>
        <description>Picklist field to enable approval routing based on data category selected.</description>
        <label>Article Approval Queue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Help Desk</fullName>
                </value>
                <value>
                    <fullName>Client Implementation</fullName>
                </value>
                <value>
                    <fullName>Client Success</fullName>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>HSE</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Premium Support</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Supplier Sales</fullName>
                </value>
                <value>
                    <fullName>Supplier Success</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Worker Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Body__c</fullName>
        <label>Article Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <defaultValue>&quot;How To&quot;</defaultValue>
        <label>Article Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Needs to be classified</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                    <isActive>false</isActive>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avetta Internal</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Salesforce Team Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_URL__c</fullName>
        <description>Created for 01628130</description>
        <formula>&quot;https://help.avetta.com/s/article/&quot; + UrlName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Audience__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Settings</fullName>
                    <color>#0B6FCE</color>
                    <label>Account Settings</label>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                    <color>#78C953</color>
                    <label>Analytics</label>
                </value>
                <value>
                    <fullName>AuditGUARD</fullName>
                    <color>#E27001</color>
                    <label>AuditGUARD</label>
                </value>
                <value>
                    <fullName>Billing</fullName>
                    <color>#A845DC</color>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Client Specific</fullName>
                </value>
                <value>
                    <fullName>DocuGUARD</fullName>
                    <color>#F3D904</color>
                    <label>DocuGUARD</label>
                </value>
                <value>
                    <fullName>EmployeeGUARD</fullName>
                    <color>#A53711</color>
                    <label>EmployeeGUARD</label>
                </value>
                <value>
                    <fullName>Getting Started</fullName>
                    <color>#66E9BD</color>
                    <label>Getting Started</label>
                </value>
                <value>
                    <fullName>InsureGUARD</fullName>
                    <color>#0B24BE</color>
                    <label>InsureGUARD</label>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                    <color>#419249</color>
                    <label>Knowledge</label>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Supplier Management</fullName>
                    <color>#B6E32E</color>
                    <label>Supplier Management</label>
                </value>
                <value>
                    <fullName>Supplier Registration</fullName>
                    <color>#641CCF</color>
                    <label>Supplier Registration</label>
                </value>
                <value>
                    <fullName>Supplier Retention</fullName>
                    <color>#F96FB7</color>
                    <label>Supplier Retention</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Version_ID__c</fullName>
        <label>Original Version ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Field to track the status of articles.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Article Qualification</fullName>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Ready for Edit</fullName>
                </value>
                <value>
                    <fullName>Waiting for Revision</fullName>
                </value>
                <value>
                    <fullName>Ready to Publish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_URL__c</fullName>
        <description>Created for: 01628130</description>
        <formula>&quot;https://avettahelp.force.com/Supplier/s/article/&quot; + UrlName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Publish_Date__c</fullName>
        <description>Field to house the date an article is planned to be published due to future release of software (features &amp; functionality).  Also used to automate reminds for the training team.</description>
        <label>Target Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Courses__c</fullName>
        <description>Field to capture the training courses that articles apply to.</description>
        <label>Training Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Worker Management – Employee</fullName>
                </value>
                <value>
                    <fullName>Worker Management – Client</fullName>
                </value>
                <value>
                    <fullName>Worker Management – Supplier</fullName>
                </value>
                <value>
                    <fullName>Analytics – Introduction</fullName>
                </value>
                <value>
                    <fullName>Analytics – Advanced</fullName>
                </value>
                <value>
                    <fullName>Navigation – Supplier</fullName>
                </value>
                <value>
                    <fullName>Dashboard – Client</fullName>
                </value>
                <value>
                    <fullName>Dashboard – Supplier</fullName>
                </value>
                <value>
                    <fullName>Network – Client</fullName>
                </value>
                <value>
                    <fullName>Network – Supplier</fullName>
                </value>
                <value>
                    <fullName>Supplier Details – Client</fullName>
                </value>
                <value>
                    <fullName>Files - Client</fullName>
                </value>
                <value>
                    <fullName>Profile - Client</fullName>
                </value>
                <value>
                    <fullName>Profile - Supplier</fullName>
                </value>
                <value>
                    <fullName>Insurance - Supplier</fullName>
                </value>
                <value>
                    <fullName>Compliance – Supplier</fullName>
                </value>
                <value>
                    <fullName>Registration – Supplier</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Knowledge_Article_Translations</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>OWNER_ID</columns>
        <columns>Original_Version_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>fr_CA</value>
        </filters>
        <label>Knowledge Article Translations</label>
    </listViews>
    <listViews>
        <fullName>Salesforce_Articles</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Article_Approval_Queue__c</field>
            <operation>equals</operation>
            <value>Salesforce (INTERNAL ONLY)</value>
        </filters>
        <label>Salesforce Articles</label>
        <sharedTo>
            <role>Administration</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>Article_Approval_Queue__c</columns>
        <columns>LANGUAGE</columns>
        <columns>Audience__c</columns>
        <columns>Article_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1,2,3</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Knowledge</fullName>
        <active>true</active>
        <description>For Avetta Knowledge Articles</description>
        <label>Knowledge</label>
    </recordTypes>
    <validationRules>
        <fullName>Only_Training_can_validate_an_article</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( ValidationStatus ,&quot;Validated&quot;),
 $Profile.Name &lt;&gt; &quot;Training&quot;
 
)</errorConditionFormula>
        <errorMessage>Only the Training team can validate an article.</errorMessage>
    </validationRules>
</CustomObject>